--- a/cfg/Depth.cfg
+++ b/cfg/Depth.cfg
@@ -9,6 +9,8 @@ from math import pi
 gen = ParameterGenerator()
 #       Name                    Type      Reconfiguration level             Description                                                            Default    Min   Max
 gen.add("scan_height",          int_t,    0,                                "Height of the laser band (in pixels).",                            1,      1,   500)
+gen.add("ythresh_min",          double_t, 0,                                "Minimum y thresh (in meters).",                              -0.60,   -5.0, 5.0)
+gen.add("ythresh_max",          double_t, 0,                                "Maximum y thresh (in meters).",                              0.30,   -5.0, 5.0)
 gen.add("scan_time",            double_t, 0,                                "Time for the entire scan sweep.",                                  0.033,  0.0, 1.0)
 gen.add("range_min",            double_t, 0,                                "Minimum reported range (in meters).",                              0.45,   0.0, 10.0)
 gen.add("range_max",            double_t, 0,                                "Maximum reported range (in meters).",                              10.0,   0.0, 10.0)
