完成雷达点转换

--- a/cfg/Depth.cfg
+++ b/cfg/Depth.cfg
@@ -12,8 +12,10 @@ gen.add("scan_height",          int_t,    0,                                "Hei
 gen.add("ythresh_min",          double_t, 0,                                "Minimum y thresh (in meters).",                              -0.60,   -5.0, 5.0)
 gen.add("ythresh_max",          double_t, 0,                                "Maximum y thresh (in meters).",                              0.30,   -5.0, 5.0)
 gen.add("scan_time",            double_t, 0,                                "Time for the entire scan sweep.",                                  0.033,  0.0, 1.0)
-gen.add("range_min",            double_t, 0,                                "Minimum reported range (in meters).",                              0.45,   0.0, 10.0)
-gen.add("range_max",            double_t, 0,                                "Maximum reported range (in meters).",                              10.0,   0.0, 10.0)
+gen.add("range_min",            double_t, 0,                                "Minimum reported range (in meters).",                              0.45,   0.0, 12.0)
+gen.add("range_max",            double_t, 0,                                "Maximum reported range (in meters).",                              10.0,   0.0, 15.0)
+gen.add("center_dx",            double_t, 0,                                "dx for center (in meters).",                                 -0.00,-5.00,5.00)
+gen.add("center_dy",            double_t, 0,                                "dy for center (in meters).",                                 -0.08,-5.00,5.00)
+gen.add("center_dz",            double_t, 0,                                "dz for center (in meters).",                                 -0.08,-5.00,5.00)
 gen.add("output_frame_id",      str_t,    0,                                "Output frame_id for the laserscan.",   "camera_depth_frame")
-
 exit(gen.generate(PACKAGE, "depthimage_to_laserscan", "Depth"))
