--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -31,7 +31,7 @@ add_executable(depthimage_to_laserscan src/depthimage_to_laserscan.cpp)
 target_link_libraries(depthimage_to_laserscan DepthImageToLaserScanROS ${catkin_LIBRARIES})
 
 add_executable(laser_tf  src/TfNode.cpp src/merage_scan.cpp)
-target_link_libraries(laser_tf ${catkin_LIBRARIES} )
+target_link_libraries(laser_tf DepthImageToLaserScan ${catkin_LIBRARIES} )
 
 
 if(CATKIN_ENABLE_TESTING)
